manifests/wg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
spec:
  type: NodePort # poor kind doesn't support LoadBalancer
  selector:
    app: wg-easy
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
      nodePort: 30000
    - name: ui
      port: 51821
      targetPort: 51821
      protocol: TCP
      nodePort: 31821
